Update VOCUS 2023-02-28 patch

--- a/_posts/2020-09-10-VOCUS-台灣港人速寫日記-124-台港不同的交通燈-十字路口前的抉擇.html
+++ b/_posts/2020-09-10-VOCUS-台灣港人速寫日記-124-台港不同的交通燈-十字路口前的抉擇.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">如果你是從香港來台灣的遊客，來到路口準備要依紅綠燈號橫過馬路時，應該都會問同一個問題：為甚麼行人紅綠燈顯示綠燈，代表行人可以過馬路，但偏偏車子不停右轉過來，難道那紅綠燈是假的？這問題一直困擾着香港人，即使已經移民過來的香港人，也不時為了安全過馬路而深感煩惱。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/e8157a54-3039-47bd-a858-3f11145c1755.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/e8157a54-3039-47bd-a858-3f11145c1755.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/e8157a54-3039-47bd-a858-3f11145c1755.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/e8157a54-3039-47bd-a858-3f11145c1755.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">不過就是紅綠燈，台灣的跟香港怎會不一樣？紅綠燈當然是一樣的，但運作的邏輯就有點不同。在香港，給司機看的紅綠燈，沒有方向顯示的話，代表可以前行也可轉彎，這一點與台灣無異，差別在行人用的紅綠燈：當車子可以右轉時，行人的燈號會是紅色，代表不能跨越馬路。直至行車燈號轉紅色，車子不能行駛，行人燈號才會亮起綠燈，這時候行人就可以非常安全，在沒有被撞風險情況下越過斑馬線。</div>
 <div class="draft-block draft--p left">台灣呢？不管是汽車或行人的紅綠燈，只要是同一方向的話，大多都會一起亮綠燈，所以汽車右轉時，會有機會遇上過馬路的行人。如何越過馬路，已經是台灣人的生活哲學。大部份汽車右轉時，司機都會耐心等待行人越過馬路，但偶爾還是會有些車子急得要命，前衝右轉見人急停，然後就是嗶嗶聲作響，催促行人走快點。而一般行人知道有車要右轉，都會加快腳程穿過馬路，以免讓司機久等。當然也有些漫不經心的朋友，輕身緩步自由自在地走在斑馬線上，任那右轉車子慢慢等。也真的是一條馬路上人生百態皆呈現了。</div>
 <div class="draft-block draft--p left">不少香港人問台灣的紅綠燈既生瑜何生亮，既然汽車燈號是綠燈，為何同一時間行人燈號也是綠燈，引致人車爭路危險萬分。或許是台灣人較少步行；或許交通繁忙得不能有人車分隔的空間；或許台灣人很有守規舉的意識，懂得先讓行人橫越馬路⋯⋯當然這些都要問有關當局，我們一般人不會知道答案。</div>
