--- a/_posts/2020-11-17-VOCUS-台灣港人速寫日記-128-柱侯牛腩煲-在台灣吃到香港味.html
+++ b/_posts/2020-11-17-VOCUS-台灣港人速寫日記-128-柱侯牛腩煲-在台灣吃到香港味.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">前陣子氣溫稍降，又是打邊爐的好時機。打邊爐，台灣稱火鍋，反正就是同桌共食的人，各自將不同材料放入鍋中燙熟。台灣火鍋的湯頭一般用昆布高湯、蔬菜清湯、麻辣湯等等，而香港較常見用皮蛋芫茜湯、沙爹湯、豬骨湯等等。有一天，當我們在新竹市覓食之際，居然發現一間頗低調的小店，湯頭標榜是「柱候牛腩煲」。 </div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/ee8c63a5-71cd-4560-b532-9cd88b063ec3.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/ee8c63a5-71cd-4560-b532-9cd88b063ec3.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/ee8c63a5-71cd-4560-b532-9cd88b063ec3.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/ee8c63a5-71cd-4560-b532-9cd88b063ec3.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">所謂「柱侯」是人名，話說大清時期佛山梁柱侯廚藝高超，自製醬料烹煮雞、牛等等食材。因為食客到餐館都是求食梁柱侯的菜式，所以就通稱他的醬料為柱侯醬。以柱侯醬煮肉類非常搭配，湯色紅褐，味濃而鮮，香氣四溢時讓人有一股增加食慾的衝動，香港不少麵店都以柱侯牛腩作招徠，例如元朗的著名店家「勝利牛丸」，他們的牛腩就是以柱侯烹調，如果不愛吃牛腩，只叫一碗牛丸麵，食客大多會要求「加色」，即是加上柱侯牛腩湯汁，讓味道更佳。</div>
 <div class="draft-block draft--p left">（⋯⋯⋯⋯一張相片）</div>
 <div class="draft-block draft--p left">（⋯⋯⋯⋯一張相片）</div>
