--- a/_posts/2021-01-03-VOCUS-台灣港人速寫日記-134-最後一間唱片舖-在台灣尋找姜濤與mirror.html
+++ b/_posts/2021-01-03-VOCUS-台灣港人速寫日記-134-最後一間唱片舖-在台灣尋找姜濤與mirror.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">1月1 日一家大小坐在電腦前，觀看香港叱吒樂壇頒奬典禮。節目完結之後，大女兒天一想多了解香港流行曲，尤其是姜濤、MIRROR、林家謙、馮允謙、Serrini等等。天爸作為廿四孝老豆（老爸），當然答應她去找他們的CD，也因此展開了一段尋找唱片的歷程。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/9641fb97-44ae-4614-86e3-7bf2f08aa286.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/9641fb97-44ae-4614-86e3-7bf2f08aa286.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/9641fb97-44ae-4614-86e3-7bf2f08aa286.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/9641fb97-44ae-4614-86e3-7bf2f08aa286.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">為什麼要買唱片？上網不是都有了嗎？其實我們本身有付費訂閱Spotify及香港商台節目重溫，平常也是依賴以上兩個App聽香港廣東歌、收聽香港的廣播。但這些信用卡付費的App，連付錢的天爸都沒有「付錢」的感覺，何況是搭順風車收聽的小孩呢？我們認為娛樂不是免費的，一切的娛樂都有其成本，享受娛樂就要付出相應的代價，所以天爸很希望養成小孩子付出代價換取娛樂的習慣。</div>
 <div class="draft-block draft--p left">首先第一件事情就是要養成儲蓄的習慣，以往我們家都沒有給零用錢，現在開始就要有計劃地給孩子一些，要他們儲起來。然後就要帶孩子到唱片行，讓他們用自己的錢去購買。但問題來了，唱片行在哪裡？在Google Map輸入「唱片行」三個字，發現唱片行已近絕跡，留下的都是賣劇集DVD或者老歌為主，要在這些唱片行中找最新粵語唱片，根本是天荒夜譚。</div>
 <div class="draft-block draft--p left">在FB詢問朋友哪裏可以買到香港CD，有朋友馬上回說佳佳唱片！對，在天爸遙遠的記憶中，佳佳唱片一直是買CD的好地方。二十多年多，天爸在台北念大學時，玫瑰唱片、佳佳唱片都是不二之選，當時香港流行樂壇伴隨香港影視作品，在全球熱賣發光發亮。那時候韓劇韓星仍未走出韓國，那時候台灣新人都來香港爭取曝光，那時候全球華人演藝精英雲集維多利亞港兩岸。那時候周杰倫仍未出道，五月天仍未啼聲。</div>
