--- a/_posts/2021-11-17-VOCUS-台灣機車產業的未來趨勢-電動機車-市場飽和與國際化-patrick-wong.html
+++ b/_posts/2021-11-17-VOCUS-台灣機車產業的未來趨勢-電動機車-市場飽和與國際化-patrick-wong.html
@@ -9,7 +9,7 @@ author: 吐納商業評論
 ---
 
 <h3 class="draft-block draft--h3" name="header-2r4e6">從歷年總掛牌數、新掛牌數、間接數據的變化，來分析台灣機車產業在輕型與重型、油車與電車、國內與國際之前的板塊移動，以及未來可能的發展趨勢與方向。</h3>
-<div class="draft--imgFull"><div><img style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/c4a82cc8-e2ac-405f-b049-7bcd1e0ac0b4.jpg" data-width="1280" data-height="851" data-position="full" src="https://images.vocus.cc/c4a82cc8-e2ac-405f-b049-7bcd1e0ac0b4.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgFull"><div><img data-src="https://images.vocus.cc/c4a82cc8-e2ac-405f-b049-7bcd1e0ac0b4.jpg" data-width="1280" data-height="851" data-position="full" src="https://images.vocus.cc/c4a82cc8-e2ac-405f-b049-7bcd1e0ac0b4.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <h3 class="draft-block draft--h3" name="header-at9je">電動機車是未來趨勢</h3>
 <div class="draft-block draft--p left">由於電動機車較晚發展，因此從總掛牌數來看，電動機車在台灣目前1,300多萬台的機車中，僅佔有3%；從新掛牌數來看，除了108年與油車拉鋸來到2:8的高峰外，目前維持在1:9，暫時沒有進一步擴大差距的情形。</div>
 <div class="draft-block draft--p left">在國際綠能趨勢之下，台灣各產業也逐漸吹起減碳風潮；而追隨汽車產業的機車產業，也朝著電動的方向發展。</div>
@@ -55,7 +55,7 @@ author: 吐納商業評論
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">延伸閱讀：〈</span><a href="https://www.bnext.com.tw/article/61575/4c-car-information-march" target="_blank" class="draft--a"><span style="font-weight: bold; ">汽車電子零件占比上看50％！台灣資訊業搶進「4C」新藍海，4重點拿下供應鏈門票</span></a><span style="font-weight: bold; ">〉</span></li>
 </ul>
-<figure class="draft--imgNormal draft-block"><div><img style="height:770px" class="image-block-prerender" data-src="https://images.vocus.cc/810c7512-76c9-44ad-b6f6-596bbff54588.jpg" data-width="770" data-height="560" data-position="center" src="https://images.vocus.cc/810c7512-76c9-44ad-b6f6-596bbff54588.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">資料來源：我國汽車零組件產業發展趨勢（2017年）</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/810c7512-76c9-44ad-b6f6-596bbff54588.jpg" data-width="770" data-height="560" data-position="center" src="https://images.vocus.cc/810c7512-76c9-44ad-b6f6-596bbff54588.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">資料來源：我國汽車零組件產業發展趨勢（2017年）</figcaption></div></figure>
 <div class="draft-block draft--p left">台灣許多汽車零組件都是外銷，機車產業則大多都是內銷；尤其在內需市場飽和的情況下，餅就這麼大，還要這麼多廠商分。如果未來有任何貿易協定讓進口關稅下降，那本土機車廠商的競爭力就會更進一步受到挑戰。</div>
 <div class="draft-block draft--p left">如果機車產業是追隨在汽車之後，當台灣汽車零組件產業向外發展、機車的整車市場又飽和時，是否也該如汽車產業一樣，將焦點轉向進軍零組件的國際市場？如果要跟跨國企業角逐全球市場，則必須強化機車產業的整體競爭力才行。</div>
 <div class="draft-block draft--p left">除了汽車產業之外，也不要忘了有「自行車王國」之稱的台灣，在全球自行車產業也有相當強的競爭力。</div>
