--- a/_posts/2021-11-19-VOCUS-台灣港人速寫日記-151-醫院-健保-活在台灣獲得的最佳保護.html
+++ b/_posts/2021-11-19-VOCUS-台灣港人速寫日記-151-醫院-健保-活在台灣獲得的最佳保護.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">來台灣六年了，前五年天爸很少看醫生，覺得靠自己的力量克服病痛才是正道。但自從搬到新竹後，不知為何身體狀況不太好，有試過腰痛到休克，有試過全身長疹子，有試過呼吸不順全身無力⋯⋯近一年減少寫作，多少也跟身體大不如前有關。也因為身體變差了，天爸終於享用聞名已久的健保制度！</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/dc6852c4-043c-4308-a181-48a993bfdb2c.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/dc6852c4-043c-4308-a181-48a993bfdb2c.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/dc6852c4-043c-4308-a181-48a993bfdb2c.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/dc6852c4-043c-4308-a181-48a993bfdb2c.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">當入境台灣超過半年，就有義務開始付健保。因為有健保，如果是傷風感冒看門診，一般只是付掛號費台幣100-200左右。但是在香港傷風感冒看門診，港幣250(約台幣900）附三天藥物是起手式。這樣看來，台灣的健保真的太好了！但老實說，台灣看醫生本身也不貴，沒有健保的情況下，一般也是台幣400-600左右。所以天爸曾經覺得有沒有健保分別不算太大，直至住院做導管檢查才真正感受到健保的好。</div>
 <div class="draft-block draft--p left">高血壓不是感冒、不是長疹、不是耳鳴弱視，如果你沒有量血壓，大概也不會知道自己血壓高，但當你知道自己血壓高之後，你就會察覺到平常生活的種種「不舒適」，原來都有機會源自高血壓。天爸大概已經忘記正常血壓的感覺，反正目前長期維持在170/110這種水平。以前在台南住時，隨便也可以慢慢慢地慢跑5-10公里，做做運動健康身心。但現在天爸連走路都有點氣喘（跟戴口罩有沒有關係呢？）。</div>
 <div class="draft-block draft--p left">有一天，天爸覺得有點頭暈，心跳得很用力，所以重新每天為自己量血壓，發現一整個月的血壓都維持在極高水平。向醫生道明擔憂之後，醫生再檢視運動心電圖的結果，建議安排一周之後進行導管檢查，萬一血管已塞，就可以馬上放支架擴充血管。這手術在香港叫「通波仔」，如果在私家醫院做的話，港幣十萬應該跑不掉；如果在公立醫院做，光是要排隊見醫生可能也得等一年，莫說之後的檢查與治療。</div>
