--- a/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-1.html
+++ b/_posts/2023-02-25-VOCUS-俄烏戰爭一年總檢討-1.html
@@ -39,7 +39,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">我們就拿烏東幾個較常聽到的中小型城鎮來說好了，俄軍的目標斯洛揚斯克有居民10萬、利曼有2萬、伊久姆4萬，把親俄分子算進去後，比例拉到最大的100：1，俄軍在這16萬人的據點就要派駐1,600人（不含交通線維持等等）。</div>
 <div class="draft-block draft--p left">越往西邊靠近聶伯河，親俄人數越少，協力者數量更低，比例就得從100：1不停上升。而聶伯河以東，烏克蘭第四大城第聶伯有100萬人口，州府的人數都在20-30萬上下，大小過百城鎮都有上萬居民，各位可以稍微計算一下，16萬人夠用嗎？打對折變成50：1，這200萬居民就需要4萬安全部隊。</div>
 <div class="draft-block draft--p left">這就是為何從軍事角度來看，佔領行動是完全不成立的，只要「烏克蘭不投降」的前提還在，烏國政府組織依然在運作，烏克蘭當地居民就會得考慮親俄的後果。那麼對俄國進攻方而言，不穩定的居民就是未爆彈，怎樣都得去處理，這16萬部隊就絕對不夠。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/y7z_5_Shu3M"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/y7z_5_Shu3M"></iframe></div>
 <ul>
   <li class="draft-block draft--li">烏克蘭政府一直有在用叛國罪處理親俄內奸（編）</li>
 </ul>
