--- a/_posts/2020-09-30-VOCUS-台灣港人速寫日記-126-中秋月難圓-難以回家的香港人.html
+++ b/_posts/2020-09-30-VOCUS-台灣港人速寫日記-126-中秋月難圓-難以回家的香港人.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">中秋節是一個人月兩團圓的佳節，每到這一天，散居四海的家人也得回家，吃一口家鄉的月餅，與家人團聚於月色之下。2020年的中秋節，整個台灣都在大遷移，國道上、高鐵中滿滿都是人，為了團圓而不懼舟居之苦以解鄉愁。在同一月夜下，一群只想守住家的孩子，永遠不能再返家。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/9c8e7406-3854-4433-aa3b-e407a9cfa9ac.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/9c8e7406-3854-4433-aa3b-e407a9cfa9ac.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/9c8e7406-3854-4433-aa3b-e407a9cfa9ac.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/9c8e7406-3854-4433-aa3b-e407a9cfa9ac.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">2019年反送中抗爭開始，中國香港殖民政府不願意聽從人民的聲音，堅持推動惡法，引致香港人由一開始的反送中，改為爭取包括真普選的「五大訴求」。因為抗爭，家人之間關係緊張，弱勢的年輕人不少被趕離家門，從此不得歸家。而極權的本質是不願分享權力，引致抗爭延續至今仍未停息。為了逃避殖民政府逼害，不少年輕人逃離香港尋求外國庇護。從去年開始，這些年輕人只得仰望天上的明月，懷念以往在香港的愉快日子。</div>
 <div class="draft-block draft--p left">如果香港能跟台灣一樣可以安居樂業、主權在民；如果香港可以跟台灣一樣自由民主、公平選舉；如果香港能跟台灣一樣，即使對國家的認知不一定相同，但大家可以互相包容共處共樂⋯⋯他們就不用為了保護自己的家，而被逼逃離自己的家。</div>
 <div class="draft-block draft--p left">今年的香港的中秋節特別諷刺，因為中秋節的同一天巧遇中國國慶。多少年了，10月1日在香港人心中不是慶典，而是港殤。梁振英登上特首之位的第一個中國國慶，維港滿天煙花，因為這場煙花造成了一場39人死亡、92人受傷的船難。其實以往被英國統治時，香港人沒有特別慶祝英女王壽辰的傳統，維港不會放煙花，港府沒有衣香檳影的酒會，路上沒有英國旗，亦不會有任何祝賀國家的活動。但1997之後就不一樣了，每年維港除了新年煙花外，還加了政權移交日煙花與中國國慶煙花。2012年之後的10月1日，香港人已經不太想在這一天再看到維港煙花了。10月1日代表的是港殤。</div>
