--- a/_posts/2021-05-20-VOCUS-台灣港人速寫日記-144-天一的第二個六年-疫情中的生日快樂.html
+++ b/_posts/2021-05-20-VOCUS-台灣港人速寫日記-144-天一的第二個六年-疫情中的生日快樂.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">不知不覺，天一已經12歲了。當年她來到台灣的時候，才不過是6歲的小妹妹，而現在她已經長大到可以成為天爸天媽朋友的高度了。因為已經12歲，她需要自己的空間，例如一部mp3、例如一個看書的角落、例如一個房間⋯⋯慶幸我們在台灣，我們還是可以讓她有自己的空間。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1920px" class="image-block-prerender" data-src="https://images.vocus.cc/36b76971-2f8e-4679-b156-2db13a911d82.jpg" data-width="1920" data-height="1217" data-position="center" src="https://images.vocus.cc/36b76971-2f8e-4679-b156-2db13a911d82.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">移民台中的香港米其林餐廳甜品師傅的作品</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/36b76971-2f8e-4679-b156-2db13a911d82.jpg" data-width="1920" data-height="1217" data-position="center" src="https://images.vocus.cc/36b76971-2f8e-4679-b156-2db13a911d82.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">移民台中的香港米其林餐廳甜品師傅的作品</figcaption></div></figure>
 <div class="draft-block draft--p left">天一的第一個六年是住在香港。因為天爸天媽愛大自然，所以結婚後住在一個離市區大約30分鐘車程的鄉村地方，也因此可以用便宜的價錢住到比較寬敞的空間。移民前一刻，天一與兩歲的大天二睡在一間大約80呎（2.2坪）的房間之中；小三才剛出生，就跟爸爸媽媽睡在大約120呎（3.3坪）的房間之內。在香港，我們的房子650呎（18坪）算不小了，至少還有自己的房間，算是非常幸福。但是當小孩再長大之後呢？我們家是否仍有足夠的空間呢？</div>
 <div class="draft-block draft--p left">「⋯⋯⋯⋯一張照片」</div>
 <div class="draft-block draft--p left">當然我們沒有再想下去，因為那時候我們已經決定要移民台灣，落腳點是台南，提早一個月租了一間四房的複式單位（樓中樓），月租台幣22,000(當時港幣約5,600）含管理費與一個地下停車位。很多台南朋友說我們租太貴了，但天爸覺得價錢很合理啊⋯後來，我們由大廈的複式單位搬到透天厝，再由台南搬到新竹，雖然房子一間租得比一間大，但三姐弟妹還是住在同一個房間之中。是香港人太珍惜空間？抑或我們期望他們三姐弟妹有更好的感情？反正不同的原因交織在一起，成為我們家獨特的居住文化。但是天一慢慢長大，現時她每天拿着小說坐在客廳角落看得不亦樂乎，她也開始想在自己房間內寫作業⋯⋯或許三位小孩一個房間的日子將會隨着12歲而改變了，她寧願住在小房間內，有自己的天地。</div>
