--- a/_posts/2022-02-24-VOCUS-移民台灣速寫日記-尋找移民城市-台南魅力沒法擋.html
+++ b/_posts/2022-02-24-VOCUS-移民台灣速寫日記-尋找移民城市-台南魅力沒法擋.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">鐵定要移民台灣了，經過接近一年的觀察與考慮，我們已經定好落腳高雄或新竹。又因為高雄有捷運，對沒有開車經驗的我們來說會比較方便，所以我們以高雄為首選。但為何最終會移民台南呢？這是一個不太美麗的誤會，也必須先從我們的考量談起！</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/76bd1c5c-a747-4eb7-bad6-f354824e77d7.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/76bd1c5c-a747-4eb7-bad6-f354824e77d7.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/76bd1c5c-a747-4eb7-bad6-f354824e77d7.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/76bd1c5c-a747-4eb7-bad6-f354824e77d7.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">我們從來沒有到過高雄的中崙華德福，只是向高雄的朋友打聽學校情況，以及用電郵了解學校的收生要求。在移民前三個月，天爸跟公司請假，先到高雄租房子及與學校洽談入學安排。高雄對我們來說非常陌生，我們只在2015年初到過一次高雄，坐捷運參觀這座城市。但既然已經決定了首選高雄，即使再陌生也得先有點規劃，所以在2015年5月到高雄視察環境，順便跟學校談談入學安排。可惜當機票與飯店都訂好之後，才收到學校告知已經額滿。</div>
 <div class="draft-block draft--p left">順其自然吧！</div>
 <div class="draft-block draft--p left">我們早在2015年初到過新竹寶山（今改名麗水）的招生說明會，當時的新竹寶山在寶山鄉的一個小型別墅社區之中，附近有些住宅區，用機車接載上下學也算方便。寶山也答應可以讓天一入讀。所以當天爸知道無緣高雄之後，也沒有任何不安，就往新竹寶山吧！只是早已訂好高雄的機票與飯店，就先在高雄休息兩三天再北上新竹吧。
@@ -20,6 +20,4 @@ author: 天爸
 <div class="draft-block draft--p left">天爸沒去過奇美博物館，也不知道對方是何方神聖。早上九點左右坐火車到保安站，一個非常漂亮別緻的日式小車站，對歷史文化有興趣的天爸，馬上對台南的好印象加分。慢慢走向奇美博物館，天啊，這是台南嗎？那明明是歐洲！那宏偉的建築，那美侖美喚的雕刻⋯⋯如果香港是中西融合之城，那台南就是穿梭古今中外的古都。</div>
 <div class="draft-block draft--p left">與台南華德福創辦人在奇美博物館內的餐廳聊了一小時，這學校仍然是一團未知之數，校舍未知在哪裡，老師未知有哪裡，學生也未知在哪裡⋯⋯這共學團集合了所有不確定因素，所有被我們排除的學校的缺點都具備了，但那時候天爸心中只是希望我們可以在台南一起努力，我們一起創辦一所屬於台南的華德福學校！</div>
 <div class="draft-block draft--p left">坐自強號北上離開台南，經過數小時的奔波終於來到新竹。寶山的創辦人菡雲老師非常好，來到車站來接天爸，並前往參觀承租下來的校舍。校舍是一所深山之中的公立廢校，雖然已經有幾年沒有使用，但校舍新淨、堅居且漂亮的。菡雲老師正準備帶領家長重新刷上新油漆，地上放了一些油漆罐，她向天爸描述未來這地方會是甚麼樣子的。</div>
-<div class="draft-block draft--p left">這時候天爸內心非常掙扎，新竹寶山明明集齊所有最好的條件，但天爸心中卻想著集不明確因素於一身的台南，非常猶疑如何在台南與新竹之間作出決擇。或許就先回香港向天媽匯報一下吧！
-
-</div>
+<div class="draft-block draft--p left">這時候天爸內心非常掙扎，新竹寶山明明集齊所有最好的條件，但天爸心中卻想著集不明確因素於一身的台南，非常猶疑如何在台南與新竹之間作出決擇。或許就先回香港向天媽匯報一下吧！</div>
