--- a/_posts/2022-05-27-VOCUS-移民台灣速寫日記-移民前要做好的準備.html
+++ b/_posts/2022-05-27-VOCUS-移民台灣速寫日記-移民前要做好的準備.html
@@ -9,5 +9,5 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">2014年初已經決定移民台灣，但在整整一年的探索過程中，因為我們先以學校為考量，所以只在高雄、台南、新竹之間作選擇，並最後選了最沒有華德福教學資源的台南移民。世事總是奇妙的，因為香港華德福資源不足，所以我們才決定移民台灣，但偏偏又以台南為落腳點，現在回望感受倍深。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/4c1efe45-8397-47e8-b4d4-1d33e8b53c21.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/4c1efe45-8397-47e8-b4d4-1d33e8b53c21.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/4c1efe45-8397-47e8-b4d4-1d33e8b53c21.jpg" data-width="1200" data-height="628" data-position="center" src="https://images.vocus.cc/4c1efe45-8397-47e8-b4d4-1d33e8b53c21.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">為什麼是台南呢？除了天爸到台南的經歷外，也與天媽的弟弟曾經在成功大學升學有關。舅仔形容台南有一股澳門的氣氛，在澳門長大的天媽聽後也覺得吸引，所以就同意天爸的建議，選擇台南落腳。</div>
