--- a/_posts/2023-02-27-PQ-德國印度加深經貿的利基-德國擺脫對中依賴-印度遠離俄羅斯武器.html
+++ b/_posts/2023-02-27-PQ-德國印度加深經貿的利基-德國擺脫對中依賴-印度遠離俄羅斯武器.html
@@ -28,7 +28,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-1024x639.jpg" alt="" class="wp-image-128340" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-1024x639.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-300x187.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-768x479.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>德國總理蕭茲2022年2月25日到訪印度受到盛大歡迎後，雙方還邀集兩國企業老闆和CEO會談，期待能強化兩國經貿關係。這場重要經貿談判會議內容囊括了數位轉型、金融科技、資訊科技和電信網路。<br>圖／Narendra Modi
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-1024x639.jpg" alt="" class="wp-image-128340" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-1024x639.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-300x187.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr-768x479.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/fef03af2-fpzy01sxwaebylr.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>德國總理蕭茲2022年2月25日到訪印度受到盛大歡迎後，雙方還邀集兩國企業老闆和CEO會談，期待能強化兩國經貿關係。這場重要經貿談判會議內容囊括了數位轉型、金融科技、資訊科技和電信網路。<br>圖／Narendra Modi
 @narendramodi</figcaption></figure></div>
 
 
