--- a/_posts/2023-02-28-PQ-訪台後獲中國警告信-美議員回嗆-不在乎且會繼續挺台灣.html
+++ b/_posts/2023-02-28-PQ-訪台後獲中國警告信-美議員回嗆-不在乎且會繼續挺台灣.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-1024x609.png" alt="" class="wp-image-128476" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-1024x609.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-300x178.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-768x457.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318.png 1174w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐清傑今天透過推特表示，中共生氣但他不在乎，會繼續支持台灣等自由民主國家，總不能因為會惹毛中共就退縮／圖：歐清傑推特。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-1024x609.png" alt="" class="wp-image-128476" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-1024x609.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-300x178.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318-768x457.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/02/5391213f-螢幕擷取畫面-2023-02-28-141318.png 1174w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>歐清傑今天透過推特表示，中共生氣但他不在乎，會繼續支持台灣等自由民主國家，總不能因為會惹毛中共就退縮／圖：歐清傑推特。</figcaption></figure></div>
 
 
 
