--- a/_posts/2023-03-01-INMEDIA-初選47人案-李予信打泰拳受傷留院-押後續審-官提醒勿參與危險運動.html
+++ b/_posts/2023-03-01-INMEDIA-初選47人案-李予信打泰拳受傷留院-押後續審-官提醒勿參與危險運動.html
@@ -23,7 +23,7 @@ author: 獨媒報導
 <p>法官李運騰認為，在沒有醫療證明下，不能單憑辯方的說法確定李予信情況，亦認為不能在被告缺席下繼續審訊。控方代表、副刑事檢控專員萬德豪表示會採取行動去確認辯方的資料是否正確，又指今日原訂在庭上讀出控辯雙方承認事實，而李予信早已同意了相關事實，理解辯方獲指示在李缺席的情況下繼續審訊。</p>
 <p>法官李運騰重申，不認為在被告缺席下繼續審訊是合適做法，認為應押後。關文渭指，會嘗試要求主診醫生簽發醫療證明，並理解李予信已轉至觀察病房。法官陳慶偉決定，今天不會繼續聆訊，並着各方今午通知法庭李予信的狀況，以決定明午是否如常開庭，並暫定星期五早上續審。</p>
 <p><strong>何桂藍大狀稱昨收3份新證人供詞 控方欲為其中一人申匿名令</strong></p>
-<p>代表何桂藍的大律師 Trevor Beel 其後指，昨天收到控方800頁新文件，包括已核證的英文譯本，以及5項新材料，其中有3份新的證人供詞，均與證物鏈相關，包括負責獲取新界西相關影片的證人陳鑫（音譯）、TVB助理新聞製作總經理葉炳棠和另一負責搜證的警員。Beel 指，3人供詞均於案件開審後的2月中下旬才錄取，表示從未聽聞相關情況，又強調該些供詞應一早準備好（“All these statements should be taken long time before.”）。</p>
+<p>代表何桂藍的大律師 Trevor Beel 其後指，昨天收到控方800頁新文件，包括已核證的英文譯本，以及5項新材料，其中有3份新的證人供詞，均與證物鏈相關，包括負責獲取新界西相關影片的證人陳鑫（音譯）、TVB助理新聞製作總經理葉炳棠和另一負責搜證的警員。Beel 指，3人供詞均於案件開審後，分別於2月21日、23日及13日才錄取，表示幾乎從未聽聞這樣的情況，又強調該些供詞應一早準備好（“All these statements should be taken long time before.”）。</p>
 <p>法官李運騰續指，他亦尚未有機會閱讀該些供詞，並表示他與 Beel 有同樣不滿（“I share your dissatisfaction.”），亦認為有關證物鏈的證據，理應在很早以前便處理好（“... should be obtained long long time ago.”），但認為 Beel 現時仍有時間考慮。</p>
 <p>散庭前，控方代表萬德豪欲替剛才 Beel 所提及的其中一名證人申請匿名令，惟遭法官陳慶偉打斷，指待李予信出庭才處理。據了解，另外兩項新材料涉何桂藍 Facebook 內容及抗爭派記者會片段謄本。</p>
 <p><strong>官提醒被告勿參與危險運動：試想想這裡一天需要多少法律開支</strong></p>
