--- a/_posts/2023-03-02-INITIUM-香港剧场人在台湾-粤语-政治-血脉-标签-我们怎样moving-on.html
+++ b/_posts/2023-03-02-INITIUM-香港剧场人在台湾-粤语-政治-血脉-标签-我们怎样moving-on.html
@@ -83,6 +83,8 @@ author: 特约撰稿人 庄晓彤 发自台北
  
  
  
+
+ 
  
  
  
@@ -144,7 +146,8 @@ author: 特约撰稿人 庄晓彤 发自台北
 </p><p>“没有离开的人，他们怎么样呢？他们其实有没有hope？”</p>
 <p></p><p>去年11月《琵琶语》两场演出，台湾戏曲中心小展演厅座无虚席。袁学慧开心的是台湾观众看得到她细微的心思，而香港观众则感抚慰，向她诉说自己也有这样的离散经验。“这次剧场跟以往的performance不一样，我不是抱著要表现自己、或要表演些什么的心态，更多是用这套戏跟大家分享一些很个人、很emotional的感受。”</p><p>袁学慧记得，过去数月剧本一直改到第六稿才定稿。虽然找来了擅写家庭伦理、设计对话的郑国伟，但因此剧涉及的语言以至剧种非常多，不谙戏曲与国语的郑国伟也只好从旁协助。</p><p>袁学慧形容，创作过程就是在合作中不停争论：“看戏剧，很多东西散落在文本，观众自己去找这些线索，好像看小说；但是戏曲需要唱，所以我们需要堆叠，所以有时舍弃了一些舞台剧里（铺排）的脉络，这两件事情一直在寻求平衡。”</p><p>她又提到，现代戏剧常见的“对话”，原来在戏曲里非常少有，“戏曲很少是两个人的思辩，跟西方概念很不同。东方美学重抒情，重留白，不是很仔细的逻辑或写实，它是写意的。”</p><p>除了戏曲与剧场的融合，两个同样离乡背井的创作人对离家这件事同样感伤，但对于是否仍存有希望则有些许分别。“没有离开的人，他们怎么样呢？他们其实有没有hope？好似王昭君，最后是不是只能‘唉也无架喇，变不到架喇’？我不想，我想拯救我笔下所有的人物。”袁学慧道。</p><p>
 </p><p>《琵琶语》中，“服饰与语言拉开了与观众的距离，形成他者的存在，而机场广播暗示著移民与流动意象。”——剧评人林慧真</p>
-<p></p><p>当时戏剧顾问施如芳看过整排后，建议袁学慧要将这套戏与她本人有更强的连系，要站在袁学慧自己的立足点，从个人看到一个族群，再去贯穿古今。“所以我在最后一稿就加了第一场，大家见到我出来讲了那两通电话，以及有机场广播，还有就是最后那段拖著行李箱和机场广播。”</p><p>同样来自香港、现为台大访问学人的黎智丰，则在剧评中提出一种想像，想像云儿经历危难与风霜之后改变旅途的终点，摆脱在胡汉之间的摇摆，“莫为汉宫人，不作胡地妾，那最终应该如何定义自己的身份，我想栾提云的离开还只是自主过程的开端。”</p><p>袁学慧演活了栾提云，但栾提云有自己的路要走，袁学慧也有袁学慧的路。她记得中秋节前夕大家一齐排戏后，所有人都赶著回家。袁学慧不急，“那种回家不是从这里回到淡水那种家，而是南下回妈妈的家，回老家。然后我就想，我其实挂念些什么？”</p><p>她问自己是否挂念“回家”，答案却是犹豫的。幼年时父母离异，她独自来台，父母又各自成家，若回香港她很可能住在外婆家。“所谓挂念‘回家’，我也不过是拖著行李暂居一处，所以不是place的问题，重点是人。”</p><p>疫情期间数年，袁学慧都没有回过香港。挂念香港时袁学慧说是大围火车站外的街道，那是她住过的地方，还有中上环的旧舖，因她一家人都很喜欢穿梭横街窄巷找出大孖酱园、大同饼家等老店。“有些东西你觉得是自有永有的，但不是的，历史正大力的翻书。”袁学慧觉得唯一可做的，就是尽量去记住和实践香港给自己的，“例如香港人的效率、做事态度、粤语。”</p><p>抑或味觉，“我在台湾没吃过一个像样的叉烧，这是我最大的乡愁！”而戏中，也有云儿辞别昭君那幕，昭君送她一个锦袋，云儿打开只见装著小米与马奶。昭君说知道云儿爱吃小米粥，而马奶是怕她离开塞外就喝不到。</p><p>“迁徙是历史，会再来，我们怎样面对与moving on？我们这部戏英文名叫Ｍoving On With Lute Song。其实重点是怎样向前走，而云儿最终也是on the way。”</p><p>
+<p></p><p><a class="image" href="https://theinitium.com/article/20230303-theater-artists-from-hk-to-taiwan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/17eda0c6606e4f1eaf3ad674a72fa467.jpg?imageView2/1/w/1080/h/719/format/jpg" alt="2022年9月15日，新北市，记者会的演出过后，袁学慧在化妆间卸妆。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption">2022年9月15日，新北市，记者会的演出过后，袁学慧在化妆间卸妆。<span class="credit">摄：陈焯煇/端传媒</span></figcaption><p></p><p>当时戏剧顾问施如芳看过整排后，建议袁学慧要将这套戏与她本人有更强的连系，要站在袁学慧自己的立足点，从个人看到一个族群，再去贯穿古今。“所以我在最后一稿就加了第一场，大家见到我出来讲了那两通电话，以及有机场广播，还有就是最后那段拖著行李箱和机场广播。”</p><p>同样来自香港、现为台大访问学人的黎智丰，则在剧评中提出一种想像，想像云儿经历危难与风霜之后改变旅途的终点，摆脱在胡汉之间的摇摆，“莫为汉宫人，不作胡地妾，那最终应该如何定义自己的身份，我想栾提云的离开还只是自主过程的开端。”</p><p>袁学慧演活了栾提云，但栾提云有自己的路要走，袁学慧也有袁学慧的路。她记得中秋节前夕大家一齐排戏后，所有人都赶著回家。袁学慧不急，“那种回家不是从这里回到淡水那种家，而是南下回妈妈的家，回老家。然后我就想，我其实挂念些什么？”</p><p>她问自己是否挂念“回家”，答案却是犹豫的。幼年时父母离异，她独自来台，父母又各自成家，若回香港她很可能住在外婆家。“所谓挂念‘回家’，我也不过是拖著行李暂居一处，所以不是place的问题，重点是人。”</p><p>疫情期间数年，袁学慧都没有回过香港。挂念香港时袁学慧说是大围火车站外的街道，那是她住过的地方，还有中上环的旧舖，因她一家人都很喜欢穿梭横街窄巷找出大孖酱园、大同饼家等老店。“有些东西你觉得是自有永有的，但不是的，历史正大力的翻书。”袁学慧觉得唯一可做的，就是尽量去记住和实践香港给自己的，“例如香港人的效率、做事态度、粤语。”</p><p>抑或味觉，“我在台湾没吃过一个像样的叉烧，这是我最大的乡愁！”而戏中，也有云儿辞别昭君那幕，昭君送她一个锦袋，云儿打开只见装著小米与马奶。昭君说知道云儿爱吃小米粥，而马奶是怕她离开塞外就喝不到。</p><p>“迁徙是历史，会再来，我们怎样面对与moving on？我们这部戏英文名叫Ｍoving On With Lute Song。其实重点是怎样向前走，而云儿最终也是on the way。”</p><p>
 </p><p>“所谓挂念‘回家’，我也不过是拖著行李暂居一处，所以不是place的问题，重点是人。” “我们怎样moving on？实重点是怎样向前走，而云儿最终也是on the way。”</p>
 <p></p><p><a class="image" href="https://theinitium.com/article/20230303-theater-artists-from-hk-to-taiwan/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/03/cb1b884e579d4bbb924b7ab21d66f113.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="隔离岛剧团，(左起)Elaine、姜丽明、黄晓晖、刘绍基。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 </p><figcaption itemprop="caption">隔离岛剧团，(左起)Elaine、姜丽明、黄晓晖、刘绍基。<span class="credit">摄：陈焯𪸩/端传媒</span></figcaption><p></p><p>C 隔离岛剧团：是香港的，也不只香港的</p><p>
