Update VOCUS 2023-03-03 patch

--- a/_posts/2023-02-27-VOCUS-當我想起彩虹-想起鍚樵夫-我會想起妳.html
+++ b/_posts/2023-02-27-VOCUS-當我想起彩虹-想起鍚樵夫-我會想起妳.html
@@ -30,6 +30,4 @@ author: 仰子
 <div class="draft-block draft--p left">一年後我才從朋友的朋友，知道妳在腦內發現了腫瘤，離開香港醫治了。但當我想托人找妳時，卻連朋友也連繫不上妳了。</div>
 <div class="draft-block draft--p left">成長中，總在不同的回憶，烙印在世界上、烙印在你的心裡。</div>
 <div class="draft-block draft--p left">當我想起彩虹、想起鍚樵夫，我會想起妳。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/H-M3R42G0JY"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/H-M3R42G0JY"></iframe></div>
