--- a/_posts/2023-03-01-VOCUS-盲柳與沈睡的女人-煩擾的夢與真實.html
+++ b/_posts/2023-03-01-VOCUS-盲柳與沈睡的女人-煩擾的夢與真實.html
@@ -53,5 +53,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">但我覺得導演在挑故是有一定的考量，只是礙於原作擺在那邊能更動的地方不多，有所限制下，會讓兩個不同的故事相連接時，往往出現小瑕疵，讓整部作品像是故事沒有完成。但是如果把這部電影切開來看，整體的結尾的確留有懸念。</div>
 <div class="draft-block draft--p left">例如《生日女郎，鸊鷉》中在魔幻與寫實的拿捏感就很不錯，但是擺在整部電影的位子就有點怪，也不明白這劇情對整體的故事有什麼推進？整部電影常常呈現這種單看很好，串在一起就滿頭問候的局面。</div>
 <div class="draft-block draft--p left">故《盲柳與沈睡的女人》我自己建議是將所有的故事都拆開來看，也許導演也知道要串連起全部瑕疵感會不少，還特地在每個片段開頭放上編號，但是就等同宣告改編的缺失，長篇？短篇？兩者的定位就矛盾了，並且很顯然每篇故事其實要有相關性的點實在不多，個別看都很好，串起來難掩失望，以村上風的都會魔幻感的故事來說的確有魅力，但要我選擇，我想我會寧願看網路都市傳說。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/qv8fAM6Gq38"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/qv8fAM6Gq38"></iframe></div>
