--- a/_posts/2023-03-02-VOCUS-你的浪漫-讓人忌妒.html
+++ b/_posts/2023-03-02-VOCUS-你的浪漫-讓人忌妒.html
@@ -16,16 +16,14 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">西元1831年9月，因政治動盪而打消前往義大利進修的念頭後，蕭邦轉而踏上巴黎的土地（<span style="font-weight: bold; ">終期餘生，他沒有再回到波蘭故土</span>），花都濃郁的藝術氛圍，自由自在的新鮮空氣，很快地就讓他深深著迷；</div>
 <div class="draft-block draft--p left">漫步在筆下所形容<span style="font-weight: bold; ">「世界上最美麗的城市」</span>，蕭邦經由沙龍巡演的形式，年方二十出頭，但琴藝早已備受巴黎音樂圈前輩們的肯定，也躍居當地家喻戶曉的風雲人物……入門弟子更多半是仰慕而來的女學生。</div>
 <div class="draft-block draft--p left">隨著教授鋼琴、作曲集出版等本業收入的持續增加，蕭邦的生活不只獲得充分改善，在經濟無虞，進一步配有私人馬車與隨從管家下，他挹注大量心力於開創鋼琴音樂的曲式、和聲法等作曲技巧。今天回顧起來，或許這樣講，嗯，有點矯情吧，但藉著蕭邦的努力，「鋼琴」（Klavier），作為製程技術相對於小提琴較晚成熟的鍵盤樂器，逐漸<span style="font-weight: bold; ">升格成古典樂的「大當家」，躋身主流中的主流！</span>換句話說，<span style="font-weight: bold; ">蕭邦幾乎一人奠基了大家今日所認定「古典音樂 = 鋼琴」的鐵律啊！</span>（各位蕭邦粉絲請在留言處+1）</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/lccVbc05AYA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/lccVbc05AYA"></iframe></div>
 <div class="draft-block draft--p left">西元1835年時，蕭邦順利取得法國公民資格，證件上改稱法語名「Frédéric François Chopin」，旅行時也能持用法國護照通關。但根據旁人的回憶，<span style="font-weight: bold; ">蕭邦始終「不承認」自己是法國人，也不太喜歡說法語，人即便在巴黎的蔚藍天空下，依舊以正統波蘭人自居。</span></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/e8c5fa3b-1c7f-4e17-9322-df8198277274.jpg" data-width="800" data-height="1148" data-position="center" src="https://images.vocus.cc/e8c5fa3b-1c7f-4e17-9322-df8198277274.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">花都的絢爛繽紛、一草一木，不若東歐抑鬱寡歡的拘謹，也讓蕭邦擺脫了前一段失敗的戀情，後來更在音樂家的宅邸（是李斯特喔！）裡邂逅了比他年長6歲的作家喬治．桑（Georges Sand）…</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">不是言情小說裡的天雷勾動地火，而是猶如經典著作般，緩緩的升溫與加熱，</span>蕭邦從原本對於她身著男裝、抽煙行為的排斥與質疑，最後變成了兩人的相知相惜，更讓雙魚男重拾了創作與生活上的信心…</div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/143d6042-ec5c-4abd-b4eb-a290fec98ca3.jpg" data-width="929" data-height="727" data-position="center" src="https://images.vocus.cc/143d6042-ec5c-4abd-b4eb-a290fec98ca3.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">蕭邦跟喬治．桑，兩人在法國中部的Nohant-Vic莊園度過了幾年夏日優閒的時光，以詩歌與書籍為伴，蕭邦亦在此地創作出不少名曲，包括了<span style="font-weight: bold; ">降A大調波蘭舞曲《英雄》（Polonaise "héroïque" in A-flat major, Op. 53）</span>等；</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/fW0Y3M4EJ4M"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/fW0Y3M4EJ4M"></iframe></div>
 <div class="draft-block draft--p left">但兩人的戀情卻在西元1847年時戛然而止，雙方直到別世前都未公開分手理由，留下了藝文圈至今未解的謎團，以及……一絲絲的抱憾。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">才子佳人無法修成正果，或許正是藝術家的宿命吧？</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
@@ -41,18 +39,14 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">經過兩個星期的默哀與追思，蕭邦步上舒伯特的腳步，於巴黎馬德萊納教堂（Église de la Madeleine）的喪禮上，樂團同樣以演奏莫札特的《安魂曲》（Requiem in D minor, K. 626）作為世人最後的追悼；</div>
 <div class="draft-block draft--p left">告別禮拜結束，一切萬物歸於塵埃，蕭邦葬於巴黎市內的拉雪茲神父公墓；下葬時所彈奏的，是他《第二號鋼琴奏鳴曲》（Piano Sonata No. 2 in B-flat minor, Op. 35）中的《葬禮進行曲》（Marche funèbre: Lento）；</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/pT9j4mjPSrw"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/pT9j4mjPSrw"></iframe></div>
 <div class="draft-block draft--p left">就在差不多的時間，美國著名的小說家愛倫坡（Edgar Allan Poe）也跟著離開人生舞台（10月7日），也是壯年早逝（40歲），流星早墜，令吾人不勝唏噓。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">其實在耳熟能詳，揮灑於五線譜上的美妙樂曲之外，回顧蕭邦的一生，身為專業藝術工作者，<span style="font-weight: bold; ">其人其名，更是一位留名青史，愛鄉、愛國的音樂人......</span></div>
 <div class="draft-block draft--p left">蕭邦，身上流著波蘭人（父親尼古拉斯是入籍波蘭的法國人）的血，然他出生之際，波蘭國名與主權地位並不復見⋯⋯因為在詭譎多變的國際時局跟列強角力底下，西元1795年間，母親樂土，波蘭早已不幸陷落，遭到了普魯士、俄羅斯與奧地利哈布斯堡帝國等三大列強的爭食掠奪，也就是史學家所稱的「第三次瓜分波蘭」（Third Partition of Poland）。</div>
 <div class="draft-block draft--p left">成年後的蕭邦，雖身處他鄉打拼，也贏得聲望，但依舊心繫故里的復國志業……當外來的統治者企圖遏制波蘭人日漸覺醒的民族情緒與自主意識，並刻意模糊化「波蘭」二字，改以歷史性的地區名稱來取代資料或法律文書上所需提及的波蘭或波蘭人民之際（換句話說，類似用「八里坌」、「吞霄社」等名詞來置換「台灣」），<span style="font-weight: bold; ">身在巴黎的蕭邦，只能夠憑著手上的筆和墨，經由樂曲來抒發他心中的鬱悶和激情！</span>加上「法國大革命」後，拿破崙將軍的帝國版圖向外擴張，其所帶來自由、平等、博愛的革命種子，也逐漸撒在歐洲，更迅速地萌芽、茁壯；而另一方面，拿破崙又勇於挑戰及破壞傳統專制主義，也讓自立、自主的火花持續點燃在每個年輕人滿腔的建國、獨立熱血下！</div>
 <div class="draft-block draft--p left">如蕭邦著名的練習曲作品10第12號（Étude Op. 10, No. 12 in C minor），也正是大名鼎鼎的《革命練習曲》（Revolutionary Étude），創作靈感即<span style="font-weight: bold; ">源自於西元1830年年底，帝俄領土上所爆發的「（華沙）十一月起義」（November Uprising）。</span></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/7VWHBHeNrg4"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/7VWHBHeNrg4"></iframe></div>
 <div class="draft-block draft--p left">雖然說，蕭邦在尚未親眼見到波蘭獨立（要等到西元1918年）前即不幸與世長辭，但他的心臟卻按照了當時的遺願，被送回華沙，封在「聖十字教堂」（Kościółśw. Krzyża）的柱子裡，<span style="font-weight: bold; ">象徵遊子的心已經與祖國的塵土永遠合而為一，心之所歸，家之所在。</span></div>
 <div class="draft-block draft--p left">波蘭人為紀念蕭邦對於鋼琴，對於古典音樂，乃至於藝術文化所做出的莫大貢獻，更表彰他身為偉大的波蘭人象徵，故<span style="font-weight: bold; ">自西元1927年起，波蘭每五年舉行一次「蕭邦國際鋼琴大賽」（International Chopin Piano Competition），來自世界各地的頂尖鋼琴好手齊聚於華沙國家愛樂廳，波蘭政府也為每屆大賽提供約100萬美元的資助金，到了二戰之後的西元1957年，該項比賽也成為日內瓦世界國際音樂比賽聯合會的創始成員之一。</span></div>
 <div class="draft-block draft--p left">西元2021年，因新冠肺炎疫情而延後一年舉辦的第十八屆大賽，金牌得主是加拿大籍的劉曉禹（Bruce Xiaoyu Liu）。</div>
@@ -60,9 +54,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">除此之外，波蘭共和國首都華沙的對外空運樞紐，也是波蘭境內最大的國際機場，也於西元2001年時<span style="font-weight: bold; ">冠名為「華沙．奧肯切．蕭邦機場」（Port Lotniczy Warszawa-Okęcieim. FryderykaChopina / Warsaw Frederic Chopin Airport），紀念蕭邦不朽的成就與愛國典範。</span></div>
 <h3 class="draft-block draft--h3" name="header-5e0bm">身為波蘭人，永不妥協的波蘭人，Fryderyk Franciszek Chopin，絕對值得！</h3>
 <div class="draft-block draft--p left">每年的蕭邦文章最後，我總試想著，<span style="font-weight: bold; ">哪天我們台灣（或香港）是否也有機會出現以本土藝術家為名稱的機場（或車站）呢？</span></div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/KskjnfPnlmM"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/KskjnfPnlmM"></iframe></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">嘉義陳澄波紀念車站？北捷鄧雨賢站？撇開政治等意識形態，也許都是未來可行的選項。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">附錄：</div>
@@ -71,4 +63,3 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">圖文來源、一併致謝；</div>
 <div class="draft-block draft--p left"><a href="https://en.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin" target="_blank" class="draft--a">https://en.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Chopin</a></div>
-<div class="draft-block draft--p left"></div>
