--- a/_posts/2023-03-03-PQ-模仿-獵人-幻影旅團-俄羅斯青少年不滿情緒高漲在各地引起暴力事件.html
+++ b/_posts/2023-03-03-PQ-模仿-獵人-幻影旅團-俄羅斯青少年不滿情緒高漲在各地引起暴力事件.html
@@ -17,7 +17,7 @@ author: 陳怡菱
 
 
 <figure class="wp-block-embed is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="【ロシア】モスクワのショッピングモールに幻影旅団を名乗る集団が現れる【プーチン】" src="https://www.youtube.com/embed/mklysHKxL2w?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe loading="lazy" title="【ロシア】モスクワのショッピングモールに幻影旅団を名乗る集団が現れる【プーチン】" src="https://www.youtube.com/embed/mklysHKxL2w?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div><figcaption>俄羅斯青少年在各地引起暴力事件。</figcaption></figure>
 
 
