--- a/_posts/2023-03-03-INMEDIA-chatgpt答港隊得獎應播-中華人民共和國國歌-尚海龍-較google優勝.html
+++ b/_posts/2023-03-03-INMEDIA-chatgpt答港隊得獎應播-中華人民共和國國歌-尚海龍-較google優勝.html
@@ -15,7 +15,7 @@ author: 獨媒報導
 <p><strong>稱嘗試用ChatGPT寫論文 ：佢唔得㗎 水平好差</strong></p>
 <p>在節目中，楊永杰提到港大禁止師生使用ChatGPT防止抄襲，尚海龍表示支持港大的決定，他認為學生應該透過個人努力學習和搜索資料，撰寫自己的論文。不過，尚海龍卻稱ChatGPT只是一個網絡工具，自己曾嘗試利用ChatGPT寫論文，「佢唔得㗎，佢水平好差㗎吓」，認為大眾毋須過分憂慮其技術。他又指ChatGPT是一個「Learning Center （學習中心）」，有助青年辦別及選擇資料，認為大學要檢討使用科技的方向。</p>
 <p><strong>ChatGPT適用於客戶服務 建議《青年藍圖》手機應用程式使用</strong></p>
-<p>楊永杰問到，ChatGPT如何運用在議會當中。尚海龍解釋ChatGPT技術屬於NPL（Natural Language Processing 自然語言處理）的一種，對比Siri或其他聊天工具，ChatGPT更有人情味和有情商，會按照人的問題反饋反應和交流，所以ChatGPT最適合用於「Customer Service（客戶服務）」。</p>
+<p>楊永杰問到，ChatGPT如何運用在議會當中。尚海龍解釋ChatGPT技術屬於NLP（Natural Language Processing 自然語言處理）的一種，對比Siri或其他聊天工具，ChatGPT更有人情味和有情商，會按照人的問題反饋反應和交流，所以ChatGPT最適合用於「Customer Service（客戶服務）」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/62hPvi2H4x" title="螢幕截圖 2023-03-03 下午4.27.12"><img src="https://live.staticflickr.com/65535/52722330747_601bf055a6_b.jpg" alt="螢幕截圖 2023-03-03 下午4.27.12" /></a><br /><em>尚海龍（影片截圖）</em></p>
 <p>尚海龍提到，民政及青年事務局局長麥美娟早前在《青年發展藍圖》中提出建立以青年人為本的手機應用程式，他認為ChatGPT可應用服務青年上，「如果大家仲用緊打電話hotline（熱線），已經好out（過時）啦，所以宜家要用現代科技」。</p>
 <p>至於有一些外媒指內地政府禁止當地科技公司使用ChatGPT，尚海龍表示「唔覺得會係咁」。他指北京市政府早前於《2022年北京人工智能產業發展白皮書》中提到，支持創科公司打造對標ChatGPT的大模型，而百度及科大訊飛等上市公司都有宣布將會推出人工智能平台服務，相信中國政府會鼓勵便用。</p>
