--- a/_posts/2023-03-03-INITIUM-我不想成为战地记者-专访乌克兰摄影师-maxim-dondyuk.html
+++ b/_posts/2023-03-03-INITIUM-我不想成为战地记者-专访乌克兰摄影师-maxim-dondyuk.html
@@ -65,9 +65,9 @@ author: 难分
           <div class="cover__summary">
             <p>「我有過多次命懸一線的經歷，很難說出當中哪次最危險。」</p>
           </div>
-          <div class="cover__share"><a class="cover__share--facebook" href="https://www.facebook.com/sharer.php?s=100&u=https://theinitium.com/project/20230304-photo-maxim-dondyuk-russia-ukraine-war-anniversary" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=368,width=600'); return false;" title="分享到 Facebook" data-cf-modified-71b18f1dfc3522681945f7f1-><svg class="icon icon--facebook" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <div class="cover__share"><a class="cover__share--facebook" href="https://www.facebook.com/sharer.php?s=100&u=https://theinitium.com/project/20230304-photo-maxim-dondyuk-russia-ukraine-war-anniversary" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=368,width=600'); return false;" title="分享到 Facebook" data-cf-modified-b7472314aabeabaca69307c8-><svg class="icon icon--facebook" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                 <use href="#facebook"/>
-              </svg></a><a class="cover__share--twitter" href="https://twitter.com/share?url=https://theinitium.com/project/20230304-photo-maxim-dondyuk-russia-ukraine-war-anniversary&amp;text=%E3%80%8C%E6%88%91%E6%9C%89%E9%81%8E%E5%A4%9A%E6%AC%A1%E5%91%BD%E6%87%B8%E4%B8%80%E7%B7%9A%E7%9A%84%E7%B6%93%E6%AD%B7%EF%BC%8C%E5%BE%88%E9%9B%A3%E8%AA%AA%E5%87%BA%E7%95%B6%E4%B8%AD%E5%93%AA%E6%AC%A1%E6%9C%80%E5%8D%B1%E9%9A%AA%E3%80%82%E3%80%8D&amp;via=initiumnews" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=400,width=600'); return false;" title="分享到 Twitter" data-cf-modified-71b18f1dfc3522681945f7f1-><svg class="icon icon--twitter" viewBox="0 0 127 100" xmlns="http://www.w3.org/2000/svg">
+              </svg></a><a class="cover__share--twitter" href="https://twitter.com/share?url=https://theinitium.com/project/20230304-photo-maxim-dondyuk-russia-ukraine-war-anniversary&amp;text=%E3%80%8C%E6%88%91%E6%9C%89%E9%81%8E%E5%A4%9A%E6%AC%A1%E5%91%BD%E6%87%B8%E4%B8%80%E7%B7%9A%E7%9A%84%E7%B6%93%E6%AD%B7%EF%BC%8C%E5%BE%88%E9%9B%A3%E8%AA%AA%E5%87%BA%E7%95%B6%E4%B8%AD%E5%93%AA%E6%AC%A1%E6%9C%80%E5%8D%B1%E9%9A%AA%E3%80%82%E3%80%8D&amp;via=initiumnews" onclick="if (!window.__cfRLUnblockHandlers) return false; javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=400,width=600'); return false;" title="分享到 Twitter" data-cf-modified-b7472314aabeabaca69307c8-><svg class="icon icon--twitter" viewBox="0 0 127 100" xmlns="http://www.w3.org/2000/svg">
                 <use href="#twitter"/>
               </svg></a></div>
         </div>
@@ -163,7 +163,7 @@ author: 难分
         <h2>戰爭的遺跡</h2>
         <p>儘管是戰爭照片，Dondyuk 不會刻意追求吸引眼球的衝突性影像，照片比較含蓄克制，相比起捕捉動作和情緒的最高點，有時候只拍攝血跡和轟炸的痕跡。他覺得這樣的照片更具象徵性，能超越個別事件，讓更多觀眾產生共鳴。</p>
         <p>
-          例如拍攝伊爾平街上一具屍體手部的特寫，地面佈滿泥濘，年輕的手上染有血跡，食指上戴著婚戒；在哈爾科夫村落，一架被撃毀的直升機，焚燒過後在翠綠草地上劃有墜機的痕跡；在布查市公寓，廚房裡躺著一位被迫撃炮襲擊身亡的老婦，婦人身上穿著厚重外衣，日常用品如常擺放在枱面上；畫面不血腥，卻有種教人不適的平靜，令人困惑：到底發生了甚麼事？
+          例如拍攝伊爾平街上一具屍體手部的特寫，地面佈滿泥濘，年輕的手上染有血跡，無名指上戴著婚戒；在哈爾科夫村落，一架被撃毀的直升機，焚燒過後在翠綠草地上劃有墜機的痕跡；在布查市公寓，廚房裡躺著一位被迫撃炮襲擊身亡的老婦，婦人身上穿著厚重外衣，日常用品如常擺放在枱面上；畫面不血腥，卻有種教人不適的平靜，令人困惑：到底發生了甚麼事？
         </p>
       </section>
       <section class="album">
