--- a/_posts/2023-03-04-INMEDIA-拒交資料案3人罪成-官-外國代理人-在港是新概念-警有需要索資料非漁翁撒網.html
+++ b/_posts/2023-03-04-INMEDIA-拒交資料案3人罪成-官-外國代理人-在港是新概念-警有需要索資料非漁翁撒網.html
@@ -26,7 +26,7 @@ author: 獨媒報導
 <p>羅續指，支聯會於1989年成立，多年來無間斷進行主要圍繞六四的政治活動，大部分均涉與本地及外地組織人物的連繫。因此，為了在調查開始時確認支聯會的背景，用以認出相關人士的完整董事和全職員工名單是「無可避免」，亦有必要索取支聯會的會議紀錄、資產、與其他組織人士的交流及金錢往來等，以調查各組織和人士的聯繫和最終目的。</p>
 <p>羅強調，要求提供相關資料「並非漁翁撒網（broad-brush finishing exercise），而是限於某時段和性質」，警察做法是「節制和自制」（abstemious and self-restrained）。</p>
 <p><strong>辯方質疑條例無追溯力 官稱視乎持續行為</strong></p>
-<p>至於辯方質疑，警方無權索取來自《國安法》生效前、最早追溯至1989年的資料，指當時的政權甚至與現在不同。惟羅德泉認為，「國家安全的概念並不只限於某個時間點才出現」，而是關乎一連串有累積效果的行為的持續（a continuation of series of acts with accumulative and generative aim to an ultimate end） ，不論當時是否同一個政權，故辯方對通知書追溯力的質疑並不成立。</p>
+<p>至於辯方質疑，警方無權索取來自《國安法》生效前、最早追溯至1989年的資料，指當時的政權甚至與現在不同。惟羅德泉認為，「國家安全的概念並不只限於某個時間點才出現」，而是關乎一連串向着終極目標的持續行為（a continuation of series of acts with accumulative and generative aim to an ultimate end） ，不論當時是否同一個政權，故辯方對通知書追溯力的質疑並不成立。</p>
 <p>辯方亦質疑，警方要求以書面形式提供資料，並提供相關證明文件，是超出附表5的範圍，惟羅德泉指，「書面形式」只是資料傳遞的方式，而「證明文件」是用來證實的額外資料，故不認為要求超出條例範圍。</p>
 <p><strong>辯方稱可循其他渠道索資料 官指調查方法「越直接越好」</strong></p>
 <p>辯方亦提出，警方要求的資料實可在其他渠道獲取，包括公司註冊處、警方從會計師索取的紀錄、支聯會工作年報及單張等。羅德泉指，附表5目的是防止和偵查，不論調查方法如何，必定「越直接越好」，以減低延誤或遺漏的風險。</p>
@@ -41,7 +41,7 @@ author: 獨媒報導
 <p>羅德泉總結，涉案通知書送達被告時是合理和合法，獲發通知書的人有責任提供相關資料，惟從3人共同簽署、遞交給警方的公開信可見，各被告明顯毫無意圖提供任何資料，亦沒有嘗試找回相關資料，他們拒絕遵從通知是沒有理據（unjustified），故裁定3人罪成。</p>
 <p><strong>官指不披露身分不影響公平審訊、洪毅拒答或違PII問題合理</strong></p>
 <p>此外，辯方於本案多次要求控方交代支聯會被指為哪個外國政府或組織的代理人，惟控方以會影響進行中的調查為由，申請「公眾利益豁免權（PII）」，涉案調查報告和洪毅向警務處處長要求發通知書的文件均被大幅隱去，僅以代號稱呼受查的組織和人士，辯方批評令審訊不公。</p>
-<p>羅德泉在判詞重提批准隱去文件的理據，認為全面披露會嚴重影響進行中的調查，故在隱去受查人身分及可能涉露他們身分等資訊下批准披露部分文件，並為免透過文件上的金額猜出相關組織和人士身分，只披露相關金額有多少位數。羅指，本案關鍵應是各組織的關係如何令警方發通知書，而非着眼他們的身分，不認為不披露支聯會和被告以外的資料，會影響公平審訊，亦足夠辯方陳述其案情。</p>
+<p>羅德泉在判詞補充批准隱去文件的理據，認為國家安全對公眾利益至為重要，為免洩露警方調查，故隱去受查人身分及可能涉露他們身分等資訊，並只披露相關金額有多少位數，以免猜出相關組織和人士身分。羅指，本案關鍵應是各組織的關係如何令警方發通知書，而非着眼他們的身分，不認為不披露支聯會和被告以外的資料，會影響公平審訊。</p>
 <p>羅德泉在審訊中亦裁定若有違 PII 風險，洪毅可選擇不回答問題。羅今在判詞特意重申，洪毅知道調查進度並擁有所有涉案資料，最有資格（in the best position）判斷資料流出的風險，故他拒答是合理。</p>
 <p>案中5名被告為：鄒幸彤（36歲，大律師）、鄧岳君（53歲，無業）、梁錦威（36歲，葵青區議員）、陳多偉（57歲，貨車司機）和徐漢光（72歲，退休）。</p>
 <p>控罪指他們違反《國安法》第43條實施細則附表5第3(3)(b)條，於去年9月8日，作為香港市民支援愛國民主運動聯合會（支聯會）在香港的幹事或在香港管理或協助管理該組織的人士，並已獲根據上述《國安法》條例，送達通知，但沒有遵從根據該通知的規定。其中梁錦威和陳多偉認罪，判囚3個月，已刑滿出獄。</p>
