--- a/_posts/2023-03-04-INMEDIA-警方-女工會平衡各方利弊取消遊行-警告到場者或屬未經批准集結.html
+++ b/_posts/2023-03-04-INMEDIA-警方-女工會平衡各方利弊取消遊行-警告到場者或屬未經批准集結.html
@@ -9,7 +9,7 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/newnewdontdelete_492.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>香港婦女勞工協會<a href="https://www.inmediahk.net/node/社運/女工會周日遊行獲批不反對通知書-料100人參與?fbclid=IwAR2zKjjVIZEznE_oQU2gDs_HYJ436Y7Vy4LJAgqpOBRTZrXv_VhDZQn47Y4">原定周日（5日）舉行婦女節遊行</a>，並獲警方批出不反對通知書。惟女工會在周六晚上通知傳媒，很遺憾決定取消行動，但未交代原因。警方則表示，主辦方是在平衡各方利弊後作出決定，不會評論其背後原因，又指該不反對通知書已經無效，如果明日仍有人到相關地點進行集結，有機會干犯未經批准集結罪。</p>
-<p>女工會的遊行原定於周日早上11時舉辦遊行，由灣仔修頓球場出發至金鐘政府總部。警方港島總區署理高級警司（行動）鄭威鍵指，就活動場地、人數等作風險評估後，警方已在周四（2日）發出不反對通知書；惟主辦方在平衡各方利弊後，終決定不舉行遊行，故該不反對通知書已經無效，如果有人仍到上述地方進行集結，有機會干犯未經批准集結罪。</p>
+<p>女工會的遊行原定於周日早上11時舉辦，由灣仔修頓球場出發至金鐘政府總部。警方港島總區署理高級警司（行動）鄭威鍵指，就活動場地、人數等作風險評估後，警方已在周四（2日）發出不反對通知書；惟主辦方在平衡各方利弊後，終決定不舉行遊行，故該不反對通知書已經無效，如果有人仍到上述地方進行集結，有機會干犯未經批准集結罪。</p>
 <p>鄭威鍵又稱，不希望有人以身試法 ，但發現有暴力團夥表示會響應活動，基於國家及公共安全等，警方有責任阻止違法活動。</p>
 <p>記者質疑，女工會的Facebook帖文只有二百個讚好及少量留言，問警方所指的「暴力團夥」是誰。《明報》亦問，是否適逢兩會正於北京舉行，怕影響國際觀感，抑或女工會曾屬民陣成員，遭政治審查。鄭威鍵重申，警方尊重主辦方，不會評論其決定背後原因。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
